<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NattogDagPrototype</string>
    <string name="action_settings">Settings</string>
    <string name="loginField_username">Tast inn brukernavn</string>
    <string name="loginField_password">Tast inn passord</string>
    <string name="brukernavn">Brukernavn</string>
    <string name="passord">Passord</string>
    <string name="login_button">Login</string>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="ndblue">#43b0d0</color>
    <string name="forgot_uname_pw">Glemt brukernavn/passord?</string>
    <string name="min_konto">Min Konto</string>
    <string name="mine_ruter">Mine Ruter</string>
    <string name="finn_rute">Finn Rute</string>
    <string name="logg_ut">Logg ut</string>
    <string name="ruteinfo">Ruteinfo</string>
    <string name="tilbake">Tilbake</string>
    <string name="velg_rute">Velg Rute</string>
    <string name="velg_by">Velg By</string>
    <string name="start_rute">Start Rute</string>

</resources>
